Fix #4: carry virtual threads started inside a block off the UI carrier
A virtual thread created with no explicit scheduler inherits its parent's,
so Thread.ofVirtual() or Executors.newVirtualThreadPerTaskExecutor() inside a
VaadinSuspendingExecutor block ran under the Vaadin session lock, and taking
the lock from it recursed. SuspendingExecutor now records each own thread's
VirtualThread.runContinuation - the one Runnable the JDK hands a custom
scheduler on every submit - and forwards only those to the carrier executor;
any other continuation runs on a cached pool of platform carriers.

That removes the reason for UIExecutor's "submitted a continuation to its own
executor" WARN, which fired on every dialog close. The 64-deep submit tripwire
stays; its test now reaches the runaway through a block that drops its marker.

Ported from the SwingBridge Emulators fork.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>